--- a/amardaan/templates/campaign.html
+++ b/amardaan/templates/campaign.html
@@ -71,6 +71,10 @@
                             <input type="text" class="form-control" name="camp_name" aria-describedby="emailHelp" placeholder="Your campaign name">
                         </div>
                         <div class="form-group">
+                            <label for="camp_sub_name">Fundraiser Subtitle</label>
+                            <input type="text" class="form-control" name="camp_sub_name" aria-describedby="emailHelp" placeholder="Your campaign subtitle">
+                        </div>
+                        <div class="form-group">
                             <label for="camp_category">Fundraiser category / partner</label>
                             <select class="form-control" name="camp_category">
                                 <option value="18">Animals &amp; Pets</option>
