--- a/amardaan/templates/statistics.html
+++ b/amardaan/templates/statistics.html
@@ -131,7 +131,7 @@
                     </li>
                 </ul>
             </div>          
-            
+            <a class="nav-link" href="{{url_for('auth.logout')}}" style="text-decoration: none;">
             <ul class="side-nav">
                 <li class="side-nav__item last-item">
                     <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -141,7 +141,8 @@
                     </svg>                                       
                     <span>Log Out</span>
                 </li>
-            </ul>            
+            </ul>
+            </a>
         </nav>
 
         <main class="main-content">
@@ -223,7 +224,7 @@
                     </div>
                     <div class="box transaction-box">
                         <div class="header-container">
-                            <h3 class="section-header">Fund Transection History</h3>
+                            <h3 class="section-header">Fund Transaction History</h3>
                             <div class="date-selector">
                                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M6 1.5V3.75" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
